--- a/electron-wallet/conf/nxt.properties
+++ b/electron-wallet/conf/nxt.properties
@@ -67,7 +67,7 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=178.33.108.232;
+nxt.defaultPeers=193.70.91.232; 35.182.246.236;
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
