:construction: File modved here for better build

--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -15,7 +15,7 @@
 ################################################################################
 
 # Do not modify this file. Instead, create a nxt.properties file with only the
-# properties you need to change, and set them there. The values in 
+# properties you need to change, and set them there. The values in
 # nxt.properties override those in nxt-default.properties.
 
 
@@ -36,7 +36,7 @@
 nxt.shareMyAddress=true
 
 # Port for incoming peer to peer networking requests, if enabled.
-nxt.peerServerPort=47874
+nxt.peerServerPort=37874
 
 # Enable UPnP for the peer port.
 nxt.enablePeerUPnP=true
@@ -67,7 +67,7 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=
+nxt.defaultPeers=193.70.91.232; 35.182.246.236;
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
@@ -159,7 +159,7 @@ nxt.getMorePeers=true
 
 # Set to true to run offline - do not connect to peers and do not listen for
 # incoming peer connections. This is equivalent to setting
-# nxt.shareMyAddress=false, nxt.wellKnownPeers=, nxt.testnetPeers= 
+# nxt.shareMyAddress=false, nxt.wellKnownPeers=, nxt.testnetPeers=
 # and nxt.usePeersDb=false, and if set to true overrides those properties.
 nxt.isOffline=false
 
@@ -186,11 +186,11 @@ nxt.enableAPIServer=true
 nxt.allowedBotHosts=127.0.0.1; localhost; [0:0:0:0:0:0:0:1];
 
 # Port for http/json API requests.
-nxt.apiServerPort=7876
+nxt.apiServerPort=37876
 
 # Port for https/json API request. If same as nxt.apiServerPort, the nxt.apiSSL
 # setting determines whether SSL is used or not.
-nxt.apiServerSSLPort=7876
+nxt.apiServerSSLPort=37876
 
 # Enable UPnP for the API ports.
 nxt.enableAPIUPnP=false
@@ -245,7 +245,7 @@ nxt.apiServerEnforcePOST=true
 # requests.
 # Please choose a decent password here. Preferably, use a password generator.
 # Password protection is disabled and password is not needed when the API server
-# only listens on the localhost interface, i.e. when 
+# only listens on the localhost interface, i.e. when
 # nxt.apiServerHost=127.0.0.1.
 nxt.adminPassword=
 
@@ -657,4 +657,3 @@ nxt.disableSecurityPolicy=false
 
 # NRS version.
 nxt.version=1.11.13
-
