--- a/conf/nxt-default.properties
+++ b/conf/nxt-default.properties
@@ -67,7 +67,7 @@ nxt.myHallmark=
 
 # Default initial peers. Only used if nxt.usePeersDb=true.
 # Do not modify. Add custom peers to nxt.wellKnownPeers instead.
-nxt.defaultPeers=81.61.116.152; n.motive.network;
+nxt.defaultPeers=n.motive.network
 
 # A list of well known peer addresses / host names, separated by '; '. These
 # peers are always kept in connected state.
